# conversational-models

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
docker/app/: Dockerfile
scripts/: build_models.py  check_its_ready.sh
src/: setup.py
src/api/: main.py
src/services/: intent_service.py  llm_service.py  model_builder.py  nlu_engine.py  redis_service.py
src/ui/: app.py
src/utils/: config.py  storage.py  telemetry.py
