[project]
name = "conversacional"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.2",
    "google-genai>=1.55.0",
    "huggingface-hub>=1.2.2",
    "onnxruntime>=1.23.2",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-redis>=0.60b1",
    "opentelemetry-instrumentation-requests>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "streamlit>=1.52.1",
    "tokenizers>=0.22.1",
    "uvicorn>=0.38.0",
]
